0.10.0 (currently working on)
- [#4497] Change: Adapt the German label for the submit button to § 312g Abs. 3 BGB
- [#4485] Fix: Add TYPO3 maximum version to ext_emconf.php
- [#4481] Fix: Failing unit tests in tx_seminars_Mapper_EventTest and tx_seminars_Service_EMailSalutationTest
- [#4462] Fix: HTML tags are visible in the forms when using ameos_formidable 1.1.549
- [#4471] Fix: Double escape of date in "other dates" table in single view
- [#4467] Fix: Test failures and crashes in current Core master in tx_seminars_FrontEnd_DefaultControllerTest, tx_seminars_OldModel_RegistrationTest, tx_seminars_Service_RegistrationManagerTest
- [#4371] Fix: Empty labels in the FE editor and the registration form need be just a space instead of &nbsp;
- [#4464] Fix: CSV export links lead to 404 error
- [#4443] Cleanup: Use UTF-8 by default
- [#4366] Fix: Tab headings and all other labels are missing with the current TYPO3 master (4.7)
- [#4465] Fix: Fix JavaScript code inspection warnings
- [#3451] Cleanup: Use TYPO3's autoloader instead of oelib's autoloader
- [#4278] Cleanup: Update the copyright to 2012
- [#4452] Cleanup: Stop using the DATABASE_QUERY_ERROR and DATABASE_RESULT_ERROR constants
- [#4352] Change: Require PHP 5.3
- [#4440] Fix: In pi2, only use forceCharset for TYPO3 < 4.7
- [#4140] Change: Require TYPO3 4.5
- [#4437] Fix: Test failures in the DefaultController tests when the test are run on a typo3.local host
- [#4429] Fix: Escape the output in more places
- [#4427] Feature: Create a comma-separated titles view helper
- [#4426] Feature: Create a time range view helper
- [#4428] Fix: Test failure in tx_seminars_EmailSalutation_testcase with latest oelib
- [#4333] Change: Use the new models in the countdown
- [#4425] Fix: EventHeadline needs to unset $this->mapper in __destruct
- [#4424] Fix: Make the seminars columns searchable in TYPO3 4.6
- [#3815] Fix: Throw more meaningful Exceptions
- [#4335] Change: Use the new models in the event headline